<resources>
    <string name="app_name">KotCalc</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="d0">0</string>
    <string name="dot">.</string>

    <string name="div">:</string>
    <string name="mult">*</string>
    <string name="equally">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="del">DEL</string>
    <string name="clr">CLR</string>
    <string name="translate">Translate</string>
    <string name="save">Save</string>
    <string name="dividedByZero">Divided by zero</string>
    <string name="get_random_fox">Get random Fox</string>
    <string name="random_fox_image">random fox image</string>
    <string name="calc">Calc</string>
    <string name="random_fox">Random Fox</string>
    <string name="list">List</string>

</resources>
