<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/activity_main"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tvResult"
            android:layout_weight="2"
            style="@style/btnStyleText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/d7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn7"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/d8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn8"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/d9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline3"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>

    <Button
            android:text="@string/d4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
    <Button
            android:text="@string/d5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
    <Button
            android:text="@string/d6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"/>

    <Button
            android:text="@string/d1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"/>
    <Button
            android:text="@string/d2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"/>
    <Button
            android:text="@string/d3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"/>

    <Button
            android:text="@string/dot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnDot"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/d0"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn0"
            android:layout_weight="1"
            android:onClick="onNumberClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnEq" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/equally"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnEq"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            style="@style/btnStyleText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:text="@string/del"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnDel"
            android:onClick="onOperationClick"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.321"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline3"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline8"/>
    <Button
            android:text="@string/div"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnDiv"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.428" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"/>
    <Button
            android:text="@string/mult"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnMult"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.368" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline9" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"/>
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnMinus"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            style="@style/btnStyleText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.529" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11"/>
    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:onClick="onOperationClick"
            style="@style/btnStyleText"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.466" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline12" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.70"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.4"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.55"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.7"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline7"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.85"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline8"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.52"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline9"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.64"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline11"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.76"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline12"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.88"/>
</android.support.constraint.ConstraintLayout>